# hdf5_pipeline

./: .gitignore  README.md  config.json  create_test_hdf5.py  debug_data.py  environment.yml  pyproject.toml
.claude/: MEMORY.md
.claude/memory/: project-overview.md  project-status.md  user-profile.md
hdf5_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hdf5_pipeline/core/: __init__.py  config.py  constants.py  hdf5_utils.py  video_utils.py
hdf5_pipeline/label/: app.py  database.py  test.py
hdf5_pipeline/quality/: detector.py  hdf5_checker.py  lerobot_checker.py
hdf5_pipeline/rename/: engine.py
hdf5_pipeline/render/: batch_gui.py  engine.py
